--- a/package.json
+++ b/package.json
@@ -27,6 +27,10 @@
   },
   "dependencies": {
     "@eduardoac-skimlinks/webext-redux": "3.0.1-release-candidate",
+    "@emotion/react": "11.10.6",
+    "@emotion/styled": "11.10.6",
+    "@mui/icons-material": "5.11.16",
+    "@mui/material": "5.12.0",
     "@reduxjs/toolkit": "1.8.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
