--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "@mui/icons-material": "5.11.16",
+    "@mui/joy": "5.0.0-alpha.75",
     "@mui/material": "5.12.0",
     "@reduxjs/toolkit": "1.8.4",
     "react": "18.2.0",
