--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "@eduardoac-skimlinks/webext-redux": "3.0.1-release-candidate",
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
+    "@extend-chrome/storage": "1.5.0",
     "@mui/icons-material": "5.11.16",
     "@mui/joy": "5.0.0-alpha.75",
     "@mui/material": "5.12.0",
     "@reduxjs/toolkit": "1.8.4",
+    "openai": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "7.2.8",
@@ -61,6 +63,7 @@
     "@typescript-eslint/parser": "5.31.0",
     "@vitejs/plugin-react": "1.3.2",
     "autoprefixer": "10.4.8",
+    "dotenv": "16.0.3",
     "eslint": "8.17.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-config-react-app": "7.0.1",
