--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "openai": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "4.8.0",
     "react-redux": "7.2.8",
     "redux-persist-webextension-storage": "1.0.2",
     "reduxjs-toolkit-persist": "7.2.1",
