--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@emotion/react": "11.10.6",
     "@emotion/styled": "11.10.6",
     "@extend-chrome/storage": "1.5.0",
+    "@material-ui/core": "4.12.4",
+    "@material-ui/icons": "4.11.3",
     "@mui/icons-material": "5.11.16",
     "@mui/joy": "5.0.0-alpha.75",
     "@mui/material": "5.12.0",
