--- a/manifest.json
+++ b/manifest.json
@@ -13,37 +13,24 @@
       "matches": ["http://*/*", "https://*/*", "file:///*"]
     }
   ],
-  "host_permissions": ["<all_urls>"],
   "options_ui": {
     "page": "src/options/options.html",
     "open_in_tab": true
   },
-  "web_accessible_resources": [
-    {
-      "matches": ["<all_urls>"],
-      "resources": ["src/welcome/welcome.html"],
-      "use_dynamic_url": false
-    },
-    {
-      "matches": ["<all_urls>"],
-      "resources": ["**/*", "*"],
-      "use_dynamic_url": true
-    }
-  ],
   "action": {
     "default_popup": "src/popup/popup.html",
     "default_icon": {
-      "16": "images/extension_16.png",
-      "32": "images/extension_32.png",
-      "48": "images/extension_48.png",
-      "128": "images/extension_128.png"
+      "16": "images/icon_16.png",
+      "32": "images/icon_32.png",
+      "48": "images/icon_48.png",
+      "128": "images/icon_128.png"
     }
   },
   "icons": {
-    "16": "images/extension_16.png",
-    "32": "images/extension_32.png",
-    "48": "images/extension_48.png",
-    "128": "images/extension_128.png"
+    "16": "images/icon_16.png",
+    "32": "images/icon_32.png",
+    "48": "images/icon_48.png",
+    "128": "images/icon_128.png"
   },
   "permissions": ["storage", "tabs"]
 }
