--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@mui/icons-material": "5.11.16",
     "@mui/joy": "5.0.0-alpha.75",
     "@mui/material": "5.12.0",
+    "@react-icons/all-files": "4.1.0",
     "@reduxjs/toolkit": "1.8.4",
     "openai": "3.2.1",
     "react": "18.2.0",
