--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "@mui/material": "5.12.0",
     "@react-icons/all-files": "4.1.0",
     "@reduxjs/toolkit": "1.8.4",
+    "axios": "1.3.6",
     "openai": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
