--- a/package.json
+++ b/package.json
@@ -34,12 +34,14 @@
     "@material-ui/icons": "4.11.3",
     "@mui/icons-material": "5.11.16",
     "@mui/joy": "5.0.0-alpha.75",
-    "@mui/material": "5.12.0",
+    "@mui/material": "5.13.1",
     "@react-icons/all-files": "4.1.0",
     "@reduxjs/toolkit": "1.8.4",
     "axios": "1.3.6",
+    "bootstrap": "5.2.3",
     "openai": "3.2.1",
     "react": "18.2.0",
+    "react-bootstrap": "2.7.4",
     "react-dom": "18.2.0",
     "react-icons": "4.8.0",
     "react-redux": "7.2.8",
