--- a/package.json
+++ b/package.json
@@ -39,12 +39,14 @@
     "@reduxjs/toolkit": "1.8.4",
     "axios": "1.3.6",
     "bootstrap": "5.2.3",
+    "googleapis": "118.0.0",
     "openai": "3.2.1",
     "react": "18.2.0",
     "react-bootstrap": "2.7.4",
     "react-dom": "18.2.0",
     "react-icons": "4.8.0",
     "react-redux": "7.2.8",
+    "react-router-dom": "6.12.1",
     "redux-persist-webextension-storage": "1.0.2",
     "reduxjs-toolkit-persist": "7.2.1",
     "webextension-polyfill": "0.9.0"
