--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-redux": "7.2.8",
     "react-router-dom": "6.12.1",
     "redux-persist-webextension-storage": "1.0.2",
+    "redux-thunk": "2.4.2",
     "reduxjs-toolkit-persist": "7.2.1",
     "webextension-polyfill": "0.9.0"
   },
